<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">MyNetLyzer Pro</string>
    <string name="app_company_name" translatable="false">Owned by Keepics LLC</string>
    <string name="app_copyright">Copyright \u00A9 2016 \u002D 2017</string>
    <string name="app_website" translatable="false">App Website</string>
    <string name="app_url" translatable="false">http://mynetlyzer.com</string>

    <string name="channel_rating_best">Best Channels:</string>
    <string name="channel_rating_best_none">None</string>
    <string name="channel_rating_best_alternative">, try alternative WiFi Band</string>
    <string name="channel_rating_heading_rating">Channel Rating</string>
    <string name="channel_rating_heading_number">Channel Number</string>
    <string name="channel_rating_heading_count">Access Point Count</string>
    <string name="channel_short_name">CH</string>

    <string name="country_code_title">Country</string>
    <string name="country_code_summary" translatable="false">%s</string>
    <string name="country_code_key" translatable="false">country_code</string>

    <string name="wifi_band_title">WiFi Band</string>
    <string name="wifi_band_summary" translatable="false">%s</string>
    <string name="wifi_band_key" translatable="false">wifi_band</string>
    <string name="wifi_band_default" translatable="false">0</string>

    <string name="scan_interval_title" translatable="false">WiFi Graph Update Interval</string>
    <string name="scan_interval_summary" translatable="false">%d seconds per update</string>
    <string name="scan_interval_key" translatable="false">scan_interval</string>
    <integer name="scan_interval_min" translatable="false">5</integer>
    <integer name="scan_interval_max" translatable="false">30</integer>
    <integer name="scan_interval_default" translatable="false">5</integer>

    <string name="theme_title">Theme</string>
    <string name="theme_summary" translatable="false">%s</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_default" translatable="false">0</string>

    <string name="about_application_name" translatable="false">MyNetLyzer Pro</string>

    <string name="fast_speed_test_url" translatable="false">http://fast.com</string>
    <string name="open_speed_test_url" translatable="false">http://openspeedtest.com</string>
    <string name="open_speed_test_url_full_screen" translatable="false">http://openspeedtest.com/Get-widget.php</string>
    <string name="speedtest_googlefiber_host" translatable="false">http://speedtest.googlefiber.net</string>
    <string name="speedtest_net_url" translatable="false">http://speedtest.net</string>
    <string name="webportal_url" translatable="false">http://mynetlyzer.com/#contact</string>
    <string name="support_email" translatable="false">Email: support@mynetlyzer.com</string>

    <string name="login_with_amazon">Login with Amazon</string>
    <string name="logout">Logout</string>
    <string name="default_message">Welcome to Login with Amazon!\nIf this is your first time logging in, you will be asked to give permission for this application to access your profile data.</string>
    <string name="login_button_content_description">"Button for authorization through Login with Amazon"</string>
    <string name="return_to_app">Return to App</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>


    <string name="title_activity_home">Home</string>
    <string name="title_activity_speed_test">Speed Test</string>
    <string name="title_activity_log_data_consent">User Agreement for WiFi data analysis</string>
    <string name="log_data_user_agreement">
        To provide best assistant for improving your WiFi speed and performance, MyNetlyzer needs to work in the background and monitor your wifi signal. Press \'Agree\' to share your WiFi signal data with us or press \'Deny\' or \'Decide Later\'. You can change it later in the settings.
    </string>

    <string name="iap_instrunction_text">
        MyNetlyzer Pro provides two subscription plan, you need to purchase one of them.
    </string>

    <string name="amazon_email_account">
        Amazon Email Account
    </string>

    <string name="device_nickname">
        Device Nickname
    </string>

    <string name="device_name_cannot_be_empty">
        Device Name Can Not be Empty
    </string>

    <string name="log_data_please_enter_email">Please enter your amazon account email, your device nickname and press next</string>
    <string name="log_data_purchased_plan">Purchased Plan</string>
    <string name="agree">Agree</string>
    <string name="disagree">Deny</string>
    <string name="six_months_subs">Subscription - 6 months</string>
    <string name="six_months_subs_bought">Subscription - 6 months(Purchased)</string>
    <string name="one_year_subs">Subscription - 1 year</string>
    <string name="one_year_subs_bought">Subscription - 1 year(Purchased)</string>
    <string name="decidelater">Decide Later</string>
    <string name="next">Next</string>
    <string name="invalid_email_title">Invalid Email</string>
    <string name="invalid_email_message">Please enter valid format email</string>
    <string name="invalid_subscription">Invalid Subscription</string>
    <string name="invalid_subscription_message">Please purchase a subscription plan</string>

    <string name="continue_button">Continue</string>
    <string name="confirm_subscription">Confirmation</string>
    <string name="already_have_subscription_message">You currently have one or more valid subscriptions. Are you sure you want to purchase selected subscription plan?</string>

    <string name="email_exist_message">An email account is exist, please use a different email.</string>
    <string name="data_logging_agreement_setting">Data Logging Agreement</string>
    <string name="data_logging_subscription_setting">Subscriptions Plan</string>
    <string name="not_set">Not Set</string>

    <string name="support_screen_instruction">Please open the following link on your desktop computer and login with your amazon account.</string>
    <string name="support_screen_service_case_title">Service Case Number</string>
    <string name="support_screen_service_case_default">Click the button below</string>
    <string name="support_screen_connect_teamviewer_button_title">Connect Through TeamViewer</string>

    <string name="action_speed_test">Speed Test</string>
    <string name="action_network_speed_test">Network Speed Test</string>
    <string name="action_network_scan">Network Scan</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_current_wifi">Current WiFi</string>
    <string name="action_support">Customer Support</string>

    <string name="action_speed_test_description">Speed Test</string>
    <string name="action_network_speed_test_description">Network Speed Test shows you the download speeds of your network and latency response.</string>
    <string name="action_network_scan_description">Scan your current network devices and get devices IP address and mac address.</string>
    <string name="action_settings_description">Settings for country, account information and scan interval time.</string>
    <string name="action_about_description">About the App.</string>
    <string name="action_current_wifi_description">Current WiFi shows a pictorial view of available networks with signal strength and WiFi band used.</string>
    <string name="action_support_description">Remote support by experts to analyze and recommend actions for your network.</string>
    <string name="background_running_notice">MyNetLyzer Pro Is Working In Background</string>

    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>

    <string name="device_key">Device Name and Key :</string>
    <string name="username">Username :</string>
    <string name="title_activity_iapsetting">IAPSettingActivity</string>
    <string name="title_activity_device_name_id">DeviceNameIDActivity</string>

    <string name="about_license_title" translatable="false">License for WiFi Analysis Part</string>
    <string name="about_license_name" translatable="false">Licensed under the GPLv3</string>
    <string name="source_file_link_title" translatable="false">Source File Link</string>
    <string name="source_file_link" translatable="false">https://github.com/mynetlyzer/mynetlyzer-pro-wifi</string>
    <string name="vrem_link" translatable="false">https://vremsoftwaredevelopment.github.io/WiFiAnalyzer/</string>
    <string name="about_license_url" translatable="false">http://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_description_title" translatable="false">Description:</string>
    <string name="about_description_text" translatable="false">Optimize your WiFi network, by checking WiFi network status, signal strength and identifying crowded channels using an open-source WiFiAnalyzer for Android</string>
    <string name="about_libraries_title" translatable="false">Libraries Used:</string>
    <string name="about_library_apache" translatable="false">Apache Commons</string>
    <string name="about_library_apache_url" translatable="false">https://commons.apache.org</string>
    <string name="about_library_graph_view" translatable="false">MPAndroidChart</string>
    <string name="about_library_graph_view_url" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="about_library_material" translatable="false">Material Design Icons</string>
    <string name="about_library_material_url" translatable="false">https://design.google.com/icons</string>
    <string name="about_contributor_title" translatable="false">Contributors:</string>
    <string name="about_contributor_list" translatable="false">"Abuzer Rafey, Alex Orchard, Alexei Guevara, Caren DesBrisay, Dan Light, David Jones, Gina Chaves, Graham Foster, Jean Bourgeois, Kevin Jiang, Lee McCallum, Lukas Winkler, Marco Santinelli, Michael Melo, Michael Pickard, Silviu Marcu, Vadim Karantayer, Wei McCallum, William Gathoye, Yuriy Timofeev, 'Akira, Dtorner, Genghis, TaiXiong"</string>
    <string name="about_write_review" translatable="false">Write a Review</string>
    <string name="credit_to_vrem_title" translatable="false">Credit and Acknowledge</string>
    <string name="credit_to_vrem_text" translatable="false">The WiFi Analysis feature of the app is based on open source project -- WiFiAnalyzer, which is owned by VREM Software Developerment. The open source project link is provided below:</string>

</resources>
