<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keepics.mynetlyzer.support.SupportFragment">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:text="@string/support_screen_instruction" />-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:text="@string/support_screen_service_case_title"-->
            <!--android:textAlignment="center" />-->

        <!--<TextView-->
            <!--android:id="@+id/support_service_case"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/support_screen_service_case_default"-->
            <!--android:textAlignment="center"-->
            <!--android:textColor="@color/tv_holo_grey_light" />-->

        <!--<Button-->
            <!--android:id="@+id/support_connect_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:background="@drawable/button_states_look"-->
            <!--android:focusableInTouchMode="true"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--android:text="Connect  TeamViewer"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textColorHighlight="@android:color/white" />-->

        <!--<Button-->
            <!--android:id="@+id/support_disconnect_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:background="@drawable/button_states_look"-->
            <!--android:focusableInTouchMode="true"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--android:text="Disconnect"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textColorHighlight="@android:color/white" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button_in_setting"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/home"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/action_support"
                android:textSize="24sp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/support_screen_instruction"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/webportal_url"
            android:textAlignment="center"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/support_email"
            android:textAlignment="center"
            android:textSize="18sp" />


    </LinearLayout>

</FrameLayout>
